src/com/fsapps/HTPL/com/fsapps/HTPL/HTPLParser.java
// Generated from D:/BUILDS/htpl/src/com/fsapps/HTPL\HTPL.g4 by ANTLR 4.9.2
package com.fsapps.HTPL;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HTPLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, MAIN_TAG_START=9, 
		MAIN_TAG_END=10, OUT=11, INPUT=12, Null=13, Return=14, Assert=15, Size=16, 
		In=17, Or=18, And=19, Equals=20, NEquals=21, GTEquals=22, LTEquals=23, 
		Pow=24, Excl=25, GT=26, LT=27, Add=28, Subtract=29, Multiply=30, Divide=31, 
		Modulus=32, OBrace=33, CBrace=34, OBracket=35, CBracket=36, OParen=37, 
		CParen=38, SColon=39, Assign=40, Comma=41, QMark=42, Colon=43, Bool=44, 
		Number=45, Identifier=46, String=47, Comment=48, Space=49;
	public static final int
		RULE_parse = 0, RULE_block = 1, RULE_functionDecl = 2, RULE_functionParam = 3, 
		RULE_idList = 4, RULE_statement = 5, RULE_repeatStatement = 6, RULE_repeatWhile = 7, 
		RULE_repeatWithVar = 8, RULE_repeatFrom = 9, RULE_repeatTo = 10, RULE_repeatStep = 11, 
		RULE_repeatFixed = 12, RULE_assignment = 13, RULE_ifStatement = 14, RULE_ifStat = 15, 
		RULE_elseIfStat = 16, RULE_elseStat = 17, RULE_functionCall = 18, RULE_expression = 19, 
		RULE_indexes = 20, RULE_list = 21, RULE_exprList = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "block", "functionDecl", "functionParam", "idList", "statement", 
			"repeatStatement", "repeatWhile", "repeatWithVar", "repeatFrom", "repeatTo", 
			"repeatStep", "repeatFixed", "assignment", "ifStatement", "ifStat", "elseIfStat", 
			"elseStat", "functionCall", "expression", "indexes", "list", "exprList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'repeat'", "'while'", "'<if'", "'</if>'", "'<elif'", "'</elif>'", 
			"'<else>'", "'</else>'", null, null, "'out'", "'inp'", "'null'", "'return'", 
			"'assert'", "'size'", "'in'", "'||'", "'&&'", "'=='", "'!='", "'>='", 
			"'<='", "'^'", "'!'", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'{'", "'}'", "'['", "']'", "'('", "')'", "';'", "'='", "','", "'?'", 
			"':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "MAIN_TAG_START", 
			"MAIN_TAG_END", "OUT", "INPUT", "Null", "Return", "Assert", "Size", "In", 
			"Or", "And", "Equals", "NEquals", "GTEquals", "LTEquals", "Pow", "Excl", 
			"GT", "LT", "Add", "Subtract", "Multiply", "Divide", "Modulus", "OBrace", 
			"CBrace", "OBracket", "CBracket", "OParen", "CParen", "SColon", "Assign", 
			"Comma", "QMark", "Colon", "Bool", "Number", "Identifier", "String", 
			"Comment", "Space"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HTPL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTPLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode MAIN_TAG_START() { return getToken(HTPLParser.MAIN_TAG_START, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode MAIN_TAG_END() { return getToken(HTPLParser.MAIN_TAG_END, 0); }
		public TerminalNode EOF() { return getToken(HTPLParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(MAIN_TAG_START);
			setState(47);
			block();
			setState(48);
			match(MAIN_TAG_END);
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public TerminalNode Return() { return getToken(HTPLParser.Return, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SColon() { return getToken(HTPLParser.SColon, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(53);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(51);
						statement();
						}
						break;
					case 2:
						{
						setState(52);
						functionDecl();
						}
						break;
					}
					} 
				}
				setState(57);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Return) {
				{
				setState(58);
				match(Return);
				setState(59);
				expression(0);
				setState(60);
				match(SColon);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclContext extends ParserRuleContext {
		public List<TerminalNode> LT() { return getTokens(HTPLParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(HTPLParser.LT, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(HTPLParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(HTPLParser.Identifier, i);
		}
		public List<TerminalNode> GT() { return getTokens(HTPLParser.GT); }
		public TerminalNode GT(int i) {
			return getToken(HTPLParser.GT, i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Divide() { return getToken(HTPLParser.Divide, 0); }
		public FunctionParamContext functionParam() {
			return getRuleContext(FunctionParamContext.class,0);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitFunctionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(LT);
			setState(65);
			match(Identifier);
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(66);
				functionParam();
				}
				break;
			}
			setState(69);
			match(GT);
			setState(70);
			block();
			setState(71);
			match(LT);
			setState(72);
			match(Divide);
			setState(73);
			match(Identifier);
			setState(74);
			match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionParamContext extends ParserRuleContext {
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public FunctionParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionParam; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitFunctionParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionParamContext functionParam() throws RecognitionException {
		FunctionParamContext _localctx = new FunctionParamContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionParam);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(76);
				idList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdListContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(HTPLParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(HTPLParser.Identifier, i);
		}
		public List<TerminalNode> Comma() { return getTokens(HTPLParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(HTPLParser.Comma, i);
		}
		public IdListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitIdList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdListContext idList() throws RecognitionException {
		IdListContext _localctx = new IdListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_idList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(Identifier);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(80);
				match(Comma);
				setState(81);
				match(Identifier);
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public RepeatStatementContext repeatStatement() {
			return getRuleContext(RepeatStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				functionCall();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				ifStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				repeatStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatStatementContext extends ParserRuleContext {
		public RepeatFixedContext repeatFixed() {
			return getRuleContext(RepeatFixedContext.class,0);
		}
		public RepeatWithVarContext repeatWithVar() {
			return getRuleContext(RepeatWithVarContext.class,0);
		}
		public RepeatWhileContext repeatWhile() {
			return getRuleContext(RepeatWhileContext.class,0);
		}
		public RepeatStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitRepeatStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepeatStatementContext repeatStatement() throws RecognitionException {
		RepeatStatementContext _localctx = new RepeatStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_repeatStatement);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				repeatFixed();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				repeatWithVar();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				repeatWhile();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatWhileContext extends ParserRuleContext {
		public List<TerminalNode> LT() { return getTokens(HTPLParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(HTPLParser.LT, i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> GT() { return getTokens(HTPLParser.GT); }
		public TerminalNode GT(int i) {
			return getToken(HTPLParser.GT, i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Divide() { return getToken(HTPLParser.Divide, 0); }
		public RepeatWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatWhile; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitRepeatWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepeatWhileContext repeatWhile() throws RecognitionException {
		RepeatWhileContext _localctx = new RepeatWhileContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_repeatWhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(LT);
			setState(99);
			match(T__0);
			setState(100);
			match(T__1);
			setState(101);
			expression(0);
			setState(102);
			match(GT);
			setState(103);
			block();
			setState(104);
			match(LT);
			setState(105);
			match(Divide);
			setState(106);
			match(T__0);
			setState(107);
			match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatWithVarContext extends ParserRuleContext {
		public List<TerminalNode> LT() { return getTokens(HTPLParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(HTPLParser.LT, i);
		}
		public TerminalNode Identifier() { return getToken(HTPLParser.Identifier, 0); }
		public RepeatFromContext repeatFrom() {
			return getRuleContext(RepeatFromContext.class,0);
		}
		public RepeatToContext repeatTo() {
			return getRuleContext(RepeatToContext.class,0);
		}
		public List<TerminalNode> GT() { return getTokens(HTPLParser.GT); }
		public TerminalNode GT(int i) {
			return getToken(HTPLParser.GT, i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Divide() { return getToken(HTPLParser.Divide, 0); }
		public RepeatStepContext repeatStep() {
			return getRuleContext(RepeatStepContext.class,0);
		}
		public RepeatWithVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatWithVar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitRepeatWithVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepeatWithVarContext repeatWithVar() throws RecognitionException {
		RepeatWithVarContext _localctx = new RepeatWithVarContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_repeatWithVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(LT);
			setState(110);
			match(T__0);
			setState(111);
			match(Identifier);
			setState(112);
			repeatFrom();
			setState(113);
			repeatTo();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Comma) {
				{
				setState(114);
				repeatStep();
				}
			}

			setState(117);
			match(GT);
			setState(118);
			block();
			setState(119);
			match(LT);
			setState(120);
			match(Divide);
			setState(121);
			match(T__0);
			setState(122);
			match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatFromContext extends ParserRuleContext {
		public TerminalNode Comma() { return getToken(HTPLParser.Comma, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public RepeatFromContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatFrom; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitRepeatFrom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepeatFromContext repeatFrom() throws RecognitionException {
		RepeatFromContext _localctx = new RepeatFromContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_repeatFrom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(Comma);
			setState(125);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatToContext extends ParserRuleContext {
		public TerminalNode Comma() { return getToken(HTPLParser.Comma, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public RepeatToContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatTo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitRepeatTo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepeatToContext repeatTo() throws RecognitionException {
		RepeatToContext _localctx = new RepeatToContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_repeatTo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(Comma);
			setState(128);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatStepContext extends ParserRuleContext {
		public TerminalNode Comma() { return getToken(HTPLParser.Comma, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public RepeatStepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatStep; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitRepeatStep(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepeatStepContext repeatStep() throws RecognitionException {
		RepeatStepContext _localctx = new RepeatStepContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_repeatStep);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(Comma);
			setState(131);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatFixedContext extends ParserRuleContext {
		public List<TerminalNode> LT() { return getTokens(HTPLParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(HTPLParser.LT, i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> GT() { return getTokens(HTPLParser.GT); }
		public TerminalNode GT(int i) {
			return getToken(HTPLParser.GT, i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Divide() { return getToken(HTPLParser.Divide, 0); }
		public RepeatFixedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatFixed; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitRepeatFixed(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepeatFixedContext repeatFixed() throws RecognitionException {
		RepeatFixedContext _localctx = new RepeatFixedContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_repeatFixed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(LT);
			setState(134);
			match(T__0);
			setState(135);
			expression(0);
			setState(136);
			match(GT);
			setState(137);
			block();
			setState(138);
			match(LT);
			setState(139);
			match(Divide);
			setState(140);
			match(T__0);
			setState(141);
			match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode LT() { return getToken(HTPLParser.LT, 0); }
		public TerminalNode Identifier() { return getToken(HTPLParser.Identifier, 0); }
		public TerminalNode Assign() { return getToken(HTPLParser.Assign, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Divide() { return getToken(HTPLParser.Divide, 0); }
		public TerminalNode GT() { return getToken(HTPLParser.GT, 0); }
		public IndexesContext indexes() {
			return getRuleContext(IndexesContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTPLVisitor ) return ((HTPLVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(LT);
			setState(144);
			match(Identifier);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OBracket) {
				{
				setState(145);
				indexes();
				}
			}

			setState(148);
			match(Assign);
			setState(149);
			expression(0);
			setState(150);
			match(Divide);
			setState(151);
			match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
